--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <h3 class="home__education">Software Developer</h3>
 
                   <div class="home__buttons">
-                    <a download="" href="assets/pdf/Samruddhi-CV.pdf" class="button button--ghost">
+                    <a download="" href="assets/pdf/Samruddhi-Resume.pdf" class="button button--ghost">
                       Resume
                     </a>
                     <a href="#about" class="button">About me</a>
@@ -116,7 +116,7 @@
               <h2 class="section__title">About Me</h2>
 
               <div class="about__container container grid">
-                <img src="assets/img/about.jpg" alt="" class="about__img">
+                <!-- <img src="assets/img/about.jpg" alt="" class="about__img"> -->
 
                 <div class="about__data">
                   <div class="about__info">
