--- a/index.html
+++ b/index.html
@@ -142,14 +142,21 @@
 
                   </div>
 
+
+                </div>
+
+                <div class="about__data">
+
                   <p class="about__description">
-                    Front developer, I create web pages with UI / UX user interface,
+                    <!-- Front developer, I create web pages with UI / UX user interface,
                     I have years of experience and many clients are happy
-                    with the projects carried out.
+                    with the projects carried out. -->
+
+                    Through my work experiences and graduate course, I'm trying to break out of my comfort zone; experimenting with possibly all the domains of Computer Science, allowing myself to better identify my strengths and weaknesses.
+                    Currently, I’m focused on delving more into Computer Science and its applications by addressing new problems as technology continues to push forward.
                   </p>
 
                   <a href="#contact" class="button">Contact Me</a>
-
 
                 </div>
 
@@ -166,7 +173,7 @@
 
 
                 <div class="skills__content">
-                  <h3 class="skills__title">Software Development Engineer Intern</h3>
+                  <h3 class="skills__title">Software Engineering</h3>
 
                   <div class="skills__box">
 
@@ -246,7 +253,7 @@
 
 
                 <div class="skills__content">
-                  <h3 class="skills__title">Web development Intern</h3>
+                  <h3 class="skills__title">Web development</h3>
 
                   <div class="skills__box">
 
@@ -342,7 +349,7 @@
                 </div>
 
                 <div class="skills__content">
-                  <h3 class="skills__title">Data Science Intern</h3>
+                  <h3 class="skills__title">Data Science</h3>
 
                   <div class="skills__box">
 
@@ -611,6 +618,7 @@
                 <span class="work__item" data-filter='.web'>Web</span>
                 <span class="work__item" data-filter='.data'>Data</span>
                 <span class="work__item" data-filter='.courses'>Courses</span>
+                <span class="work__item" data-filter='.prog'>Programming</span>
               </div>
 
               <div class="work__container container grid">
@@ -702,6 +710,26 @@
                   <h3 class="work__title">CS 648 - Modern Web Development</h3>
 
                   <a href="https://github.com/sam301100/CS-648-Modern-Web-Development-Framework" class="work__button">
+                    View <i class='bx bx-right-arrow-alt work__icon'></i>
+                  </a>
+                </div>
+
+                <div class="work__card mix prog">
+                  <img src="assets/img/java.jpg" alt="" class="work__img">
+
+                  <h3 class="work__title">Java</h3>
+
+                  <a href="https://github.com/sam301100/java-programming" class="work__button">
+                    View <i class='bx bx-right-arrow-alt work__icon'></i>
+                  </a>
+                </div>
+
+                <div class="work__card mix prog">
+                  <img src="assets/img/python.jpg" alt="" class="work__img">
+
+                  <h3 class="work__title">Python</h3>
+
+                  <a href="https://github.com/sam301100/python-programming" class="work__button">
                     View <i class='bx bx-right-arrow-alt work__icon'></i>
                   </a>
                 </div>
