added leetcode tab

--- a/index.html
+++ b/index.html
@@ -734,6 +734,16 @@
                   </a>
                 </div>
 
+                <div class="work__card mix prog">
+                  <img src="assets/img/leetcode.png" alt="" class="work__img">
+
+                  <h3 class="work__title">Leetcode</h3>
+
+                  <a href="https://github.com/sam301100/Leetcode" class="work__button">
+                    View <i class='bx bx-right-arrow-alt work__icon'></i>
+                  </a>
+                </div>
+
 
               </div>
 
