updated about section

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                     I have years of experience and many clients are happy
                     with the projects carried out. -->
 
-                    Through my work experiences and graduate course, I'm trying to break out of my comfort zone; experimenting with possibly all the domains of Computer Science, allowing myself to better identify my strengths and weaknesses.
-                    Currently, I’m focused on delving more into Computer Science and its applications by addressing new problems as technology continues to push forward.
+                    Through my work experience and graduate course, I'm trying to break out of my comfort zone. Experimenting all the domains of Computer Science and allowing myself to better identify my strengths and weaknesses.
+                    Currently, I’m focused on delving more into Computer Science and its applications by addressing new problems as the technology continues to push forward.
                   </p>
 
                   <a href="#contact" class="button">Contact Me</a>
