--- a/contact.html
+++ b/contact.html
@@ -22,37 +22,43 @@
         <!--=============== HEADER ===============-->
         <header class="header scroll-header" id="header">
           <nav class="nav container">
-            <a href="#" class="nav__logo">Samruddhi</a>
+            <a href="index.html" class="nav__logo">Samruddhi</a>
 
             <div class="nav__menu">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a href="#home" class="nav__link active-link">
+                  <a href="index.html" class="nav__link active-link">
                     <i class='bx bx-home-alt'></i>
+                    <!-- <p style="font-size: 12px;">About</p> -->
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#about" class="nav__link">
+                  <a href="about.html" class="nav__link">
                     <i class='bx bx-user'></i>
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#skills" class="nav__link">
-                    <i class='bx bx-book'></i>
+                  <a href="projects.html" class="nav__link">
+                    <!-- <i class='bx bx-book'></i> -->
+                    <i class='bx bx-notepad'></i>
+
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#work" class="nav__link">
-                    <i class='bx bx-briefcase-alt-2'></i>
+                  <a href="resume.html" class="nav__link">
+                    <!-- <i class='bx bx-briefcase-alt-2'></i> -->
+                    <i class='bx bx-briefcase'></i>
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#contact" class="nav__link">
-                    <i class='bx bx-message-square-detail'></i>
+                  <a href="contact.html" class="nav__link">
+                    <!-- <i class='bx bx-message-square-detail'></i> -->
+                    <i class='bx bx-message-rounded-detail'></i>
+                    <!-- <i class='bx bx-message-rounded'></i> -->
                   </a>
                 </li>
               </ul>
@@ -67,124 +73,94 @@
 
         <!--=============== MAIN ===============-->
         <main class="main">
-          
 
-            <!--=============== CONTACT ===============-->
-            <section class="contact section" id="contact">
-              <span class="section__subtitle">Get in touch</span>
-              <h2 class="section__title">Contact Me</h2>
+          <!--=============== CONTACT ===============-->
+          <section class="contact section" id="contact">
+            <span class="section__subtitle">Get in touch</span>
+            <h2 class="section__title">Contact Me</h2>
 
-              <div class="contact__container container grid">
-                <div class="contact__content">
-                  <h3 class="contact__title">Talk to me</h3>
+            <div class="contact__container container grid">
+              <div class="contact__content">
+                <h3 class="contact__title">Talk to me</h3>
 
-                  <div class="contact__info">
-                    <div class="contact__card">
-                      <i class='bx bx-mail-send contact__card-icon'></i>
-                      <h3 class="contact__card-title">Email</h3>
-                      <span class="contact__card-data">samruddhi0730@gmail.com</span>
+                <div class="contact__info">
+                  <div class="contact__card">
+                    <i class='bx bx-mail-send contact__card-icon'></i>
+                    <h3 class="contact__card-title">Email</h3>
+                    <span class="contact__card-data">samruddhi0730@gmail.com</span>
 
-                      <a href="mailto:samruddhi0730@gmail.com" target="_blank" class="contact__button">
-                        Write me <i class="bx bx-right-arrow-alt contact__button-icon"></i>
-                      </a>
-                    </div>
-
-                    <div class="contact__card">
-                      <i class='bx bxs-phone contact__card-icon'></i>
-                      <h3 class="contact__card-title">Phone</h3>
-                      <span class="contact__card-data">858-327-1737</span>
-
-                      <a href="#" target="_blank" class="contact__button">
-                        Write me <i class="bx bx-right-arrow-alt contact__button-icon"></i>
-                      </a>
-                    </div>
-
-                    <div class="contact__card">
-                      <i class='bx bxl-linkedin-square contact__card-icon'></i>
-                      <h3 class="contact__card-title">LinkedIn</h3>
-                      <span class="contact__card-data">samruddhi30</span>
-
-                      <a href="https://www.linkedin.com/in/samruddhi30/" target="_blank" class="contact__button">
-                        Write me <i class="bx bx-right-arrow-alt contact__button-icon"></i>
-                      </a>
-                    </div>
-
+                    <a href="mailto:samruddhi0730@gmail.com" target="_blank" class="contact__button">
+                      Write me <i class="bx bx-right-arrow-alt contact__button-icon"></i>
+                    </a>
                   </div>
+
+                  <div class="contact__card">
+                    <i class='bx bxs-phone contact__card-icon'></i>
+                    <h3 class="contact__card-title">Phone</h3>
+                    <span class="contact__card-data">858-327-1737</span>
+
+                    <a href="#" target="_blank" class="contact__button">
+                      Write me <i class="bx bx-right-arrow-alt contact__button-icon"></i>
+                    </a>
+                  </div>
+
+                  <div class="contact__card">
+                    <i class='bx bxl-linkedin-square contact__card-icon'></i>
+                    <h3 class="contact__card-title">LinkedIn</h3>
+                    <span class="contact__card-data">samruddhi30</span>
+
+                    <a href="https://www.linkedin.com/in/samruddhi30/" target="_blank" class="contact__button">
+                      Write me <i class="bx bx-right-arrow-alt contact__button-icon"></i>
+                    </a>
+                  </div>
+
                 </div>
+              </div>
 
-                <div class="contact__content">
-                  <h3 class="contact__title">Write me your project</h3>
+              <div class="contact__content">
+                <h3 class="contact__title">Write me your project</h3>
 
 
-                  <form class="contact__form" action=" ">
-                    <div class="contact__form-div">
-                      <label for="" class="contact__form-tag">Name</label>
-                      <input type="text" class="contact__form-input" placeholder="Insert your name">
-                    </div>
+                <form class="contact__form" action=" ">
+                  <div class="contact__form-div">
+                    <label for="" class="contact__form-tag">Name</label>
+                    <input type="text" class="contact__form-input" placeholder="Insert your name">
+                  </div>
 
-                    <div class="contact__form-div">
-                      <label for="" class="contact__form-tag">Mail</label>
-                      <input type="email" class="contact__form-input" placeholder="Insert your email">
-                    </div>
+                  <div class="contact__form-div">
+                    <label for="" class="contact__form-tag">Mail</label>
+                    <input type="email" class="contact__form-input" placeholder="Insert your email">
+                  </div>
 
-                    <div class="contact__form-div contact__form-area">
-                      <label for="" class="contact__form-tag">Project</label>
-                      <textarea name="" id="" rows="10" cols="30" placeholder="Write your project" class="contact__form-input"></textarea>
-                    </div>
+                  <div class="contact__form-div contact__form-area">
+                    <label for="" class="contact__form-tag">Project</label>
+                    <textarea name="" id="" rows="10" cols="30" placeholder="Write your project" class="contact__form-input"></textarea>
+                  </div>
 
-                    <button class="button">Send Message</button>
+                  <button class="button">Send Message</button>
 
-                  </form>
-                </div>
+                </form>
+              </div>
+
+            </div>
+
+          </section>
+
+
+
+      <!--=============== WORK ===============-->
+            <section class="work section" id="work">
+
+
+              <div class="work__container container grid">
 
               </div>
 
             </section>
+
+
         </main>
 
-        <!--=============== FOOTER ===============-->
-        <footer class="footer">
-          <div class="footer__container container">
-            <h1 class="footer__title">Samruddhi</h1>
-
-            <ul class="footer__list">
-
-              <li>
-                <a href="#about" class="footer__link">About</a>
-              </li>
-
-              <li>
-                <a href="#work" class="footer__link">Projects</a>
-              </li>
-
-              <li>
-                <a href="#contact" class="footer__link">Contact</a>
-              </li>
-
-            </ul>
-
-            <ul class="footer__social">
-              <a href="https://www.linkedin.com/in/samruddhi30" target="_blank" class="footer__social-link">
-                <i class='bx bxl-linkedin-square'></i>
-              </a>
-
-              <a href="https://github.com/sam301100" target="_blank" class="footer__social-link">
-                <i class='bx bxl-github'></i>
-              </a>
-
-              <a href="mailto:samruddhi0730@gmail.com" target="_blank" class="footer__social-link">
-                <i class='bx bxl-gmail' ></i>
-              </a>
-
-            </ul>
-
-            <span class="footer__copy">
-                @2022 All rights reserved
-            </span>
-
-          </div>
-
-        </footer>
 
         <!--=============== SCROLLREVEAL ===============-->
         <script src="assets/js/scrollreveal.min.js"></script>
