--- a/projects.html
+++ b/projects.html
@@ -22,37 +22,43 @@
         <!--=============== HEADER ===============-->
         <header class="header scroll-header" id="header">
           <nav class="nav container">
-            <a href="#" class="nav__logo">Samruddhi</a>
+            <a href="index.html" class="nav__logo">Samruddhi</a>
 
             <div class="nav__menu">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a href="#home" class="nav__link active-link">
+                  <a href="index.html" class="nav__link active-link">
                     <i class='bx bx-home-alt'></i>
+                    <!-- <p style="font-size: 12px;">About</p> -->
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#about" class="nav__link">
+                  <a href="about.html" class="nav__link">
                     <i class='bx bx-user'></i>
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#skills" class="nav__link">
-                    <i class='bx bx-book'></i>
+                  <a href="projects.html" class="nav__link">
+                    <!-- <i class='bx bx-book'></i> -->
+                    <i class='bx bx-notepad'></i>
+
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#work" class="nav__link">
-                    <i class='bx bx-briefcase-alt-2'></i>
+                  <a href="resume.html" class="nav__link">
+                    <!-- <i class='bx bx-briefcase-alt-2'></i> -->
+                    <i class='bx bx-briefcase'></i>
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#contact" class="nav__link">
-                    <i class='bx bx-message-square-detail'></i>
+                  <a href="contact.html" class="nav__link">
+                    <!-- <i class='bx bx-message-square-detail'></i> -->
+                    <i class='bx bx-message-rounded-detail'></i>
+                    <!-- <i class='bx bx-message-rounded'></i> -->
                   </a>
                 </li>
               </ul>
@@ -68,197 +74,166 @@
         <!--=============== MAIN ===============-->
         <main class="main">
 
+
+          <section class="work section" id="work">
+            <span class="section__subtitle">My Projects</span>
+            <h2 class="section__title">Recent Works</h2>
+
+            <div class="work__filters">
+              <span class="work__item active-work" data-filter='all'>All</span>
+              <span class="work__item" data-filter='.web'>Web</span>
+              <span class="work__item" data-filter='.data'>Data</span>
+              <span class="work__item" data-filter='.courses'>Courses</span>
+              <span class="work__item" data-filter='.prog'>Programming</span>
+            </div>
+
+            <div class="work__container container grid">
+
+              <div class="work__card mix data">
+                <img src="assets/img/work2.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">Forecasting energy & breakdowns</h3>
+
+                <a href="https://github.com/sam301100/energy_forecasting" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+
+              <div class="work__card mix data">
+                <img src="assets/img/work4.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">Sales Data Analysis</h3>
+
+                <a href="https://github.com/sam301100/sales-data-analysis" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix data">
+                <img src="assets/img/work5.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">Finance Dashboard</h3>
+
+                <a href="https://github.com/sam301100/finance-dashboard" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix web">
+                <img src="assets/img/work1.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">Timbrebells Website</h3>
+
+                <a href="https://github.com/sam301100/timbrebells_website" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix web">
+                <img src="assets/img/work2.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">TinDog Website</h3>
+
+                <a href="https://github.com/sam301100/tindog-website" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix web">
+                <img src="assets/img/work2.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">Simple Portfolio Template</h3>
+
+                <a href="https://github.com/sam301100/simple-portfolio-template" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix courses">
+                <img src="assets/img/Algorithm.png" alt="" class="work__img">
+
+                <h3 class="work__title">CS 660 - Algorithm Analysis Design</h3>
+
+                <a href="https://github.com/sam301100/CS-660-Algorithm-Analysis-Design" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix courses">
+                <img src="assets/img/machinelearning.png" alt="" class="work__img">
+
+                <h3 class="work__title">CS 549 - Machine Learning</h3>
+
+                <a href="https://github.com/sam301100/CS-549-Machine-Learning" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix courses">
+                <img src="assets/img/webdev.png" alt="" class="work__img">
+
+                <h3 class="work__title">CS 648 - Modern Web Development</h3>
+
+                <a href="https://github.com/sam301100/CS-648-Modern-Web-Development-Framework" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix prog">
+                <img src="assets/img/java.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">Java</h3>
+
+                <a href="https://github.com/sam301100/java-programming" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix prog">
+                <img src="assets/img/python.jpg" alt="" class="work__img">
+
+                <h3 class="work__title">Python</h3>
+
+                <a href="https://github.com/sam301100/python-programming" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+              <div class="work__card mix prog">
+                <img src="assets/img/leetcode.png" alt="" class="work__img">
+
+                <h3 class="work__title">Leetcode</h3>
+
+                <a href="https://github.com/sam301100/Leetcode" class="work__button">
+                  View <i class='bx bx-right-arrow-alt work__icon'></i>
+                </a>
+              </div>
+
+
+            </div>
+
+
+
+
+          </section>
+
+
+
+
       <!--=============== WORK ===============-->
             <section class="work section" id="work">
-              <span class="section__subtitle">My Projects</span>
-              <h2 class="section__title">Recent Works</h2>
 
-              <div class="work__filters">
-                <span class="work__item active-work" data-filter='all'>All</span>
-                <span class="work__item" data-filter='.web'>Web</span>
-                <span class="work__item" data-filter='.data'>Data</span>
-                <span class="work__item" data-filter='.courses'>Courses</span>
-                <span class="work__item" data-filter='.prog'>Programming</span>
-              </div>
 
               <div class="work__container container grid">
 
-                <div class="work__card mix data">
-                  <img src="assets/img/work2.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">Forecasting energy & breakdowns</h3>
-
-                  <a href="https://github.com/sam301100/energy_forecasting" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-
-                <div class="work__card mix data">
-                  <img src="assets/img/work4.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">Sales Data Analysis</h3>
-
-                  <a href="https://github.com/sam301100/sales-data-analysis" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix data">
-                  <img src="assets/img/work5.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">Finance Dashboard</h3>
-
-                  <a href="https://github.com/sam301100/finance-dashboard" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix web">
-                  <img src="assets/img/work1.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">Timbrebells Website</h3>
-
-                  <a href="https://github.com/sam301100/timbrebells_website" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix web">
-                  <img src="assets/img/work2.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">TinDog Website</h3>
-
-                  <a href="https://github.com/sam301100/tindog-website" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix web">
-                  <img src="assets/img/work2.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">Simple Portfolio Template</h3>
-
-                  <a href="https://github.com/sam301100/simple-portfolio-template" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix courses">
-                  <img src="assets/img/Algorithm.png" alt="" class="work__img">
-
-                  <h3 class="work__title">CS 660 - Algorithm Analysis Design</h3>
-
-                  <a href="https://github.com/sam301100/CS-660-Algorithm-Analysis-Design" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix courses">
-                  <img src="assets/img/machinelearning.png" alt="" class="work__img">
-
-                  <h3 class="work__title">CS 549 - Machine Learning</h3>
-
-                  <a href="https://github.com/sam301100/CS-549-Machine-Learning" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix courses">
-                  <img src="assets/img/webdev.png" alt="" class="work__img">
-
-                  <h3 class="work__title">CS 648 - Modern Web Development</h3>
-
-                  <a href="https://github.com/sam301100/CS-648-Modern-Web-Development-Framework" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix prog">
-                  <img src="assets/img/java.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">Java</h3>
-
-                  <a href="https://github.com/sam301100/java-programming" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix prog">
-                  <img src="assets/img/python.jpg" alt="" class="work__img">
-
-                  <h3 class="work__title">Python</h3>
-
-                  <a href="https://github.com/sam301100/python-programming" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-                <div class="work__card mix prog">
-                  <img src="assets/img/leetcode.png" alt="" class="work__img">
-
-                  <h3 class="work__title">Leetcode</h3>
-
-                  <a href="https://github.com/sam301100/Leetcode" class="work__button">
-                    View <i class='bx bx-right-arrow-alt work__icon'></i>
-                  </a>
-                </div>
-
-
               </div>
-
-
-
 
             </section>
 
 
-
         </main>
 
-        <!--=============== FOOTER ===============-->
-        <footer class="footer">
-          <div class="footer__container container">
-            <h1 class="footer__title">Samruddhi</h1>
-
-            <ul class="footer__list">
-
-              <li>
-                <a href="#about" class="footer__link">About</a>
-              </li>
-
-              <li>
-                <a href="#work" class="footer__link">Projects</a>
-              </li>
-
-              <li>
-                <a href="#contact" class="footer__link">Contact</a>
-              </li>
-
-            </ul>
-
-            <ul class="footer__social">
-              <a href="https://www.linkedin.com/in/samruddhi30" target="_blank" class="footer__social-link">
-                <i class='bx bxl-linkedin-square'></i>
-              </a>
-
-              <a href="https://github.com/sam301100" target="_blank" class="footer__social-link">
-                <i class='bx bxl-github'></i>
-              </a>
-
-              <a href="mailto:samruddhi0730@gmail.com" target="_blank" class="footer__social-link">
-                <i class='bx bxl-gmail' ></i>
-              </a>
-
-            </ul>
-
-            <span class="footer__copy">
-                @2022 All rights reserved
-            </span>
-
-          </div>
-
-        </footer>
 
         <!--=============== SCROLLREVEAL ===============-->
         <script src="assets/js/scrollreveal.min.js"></script>
