modified pages and added some features

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <div class="nav__menu">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a href="index.html" class="nav__link active-link">
+                  <a href="index.html" class="nav__link">
                     <i class='bx bx-home-alt'></i>
                     <!-- <p style="font-size: 12px;">About</p> -->
                   </a>
@@ -55,7 +55,7 @@
                 </li>
 
                 <li class="nav__item">
-                  <a href="contact.html" class="nav__link">
+                  <a href="contact.html" class="nav__link active-link">
                     <!-- <i class='bx bx-message-square-detail'></i> -->
                     <i class='bx bx-message-rounded-detail'></i>
                     <!-- <i class='bx bx-message-rounded'></i> -->
@@ -144,6 +144,14 @@
 
             </div>
 
+          </section>
+
+          <section class="bottom_section">
+            <div class="grid">
+                <a class="bottom__button" href="index.html">
+                  Go Back <u>Home</u><i class='bx bx-right-arrow-alt bottom__icon'></i>
+                </a>
+              </div>
           </section>
 
 
