--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
                   <br>
                   <span class="home__education ">Giving the least difficult answer for the most perplexing problems. View my
 
-                      <a download="" href="projects.html" class="button button--ghost">
+                      <a download="" href="projects.html" class="indexbutton">
                         Projects
                       </a>
                       <span>,</span>
-                      <a download="" href="resume.html" class="button button--ghost">
+                      <a download="" href="resume.html" class="indexbutton indexbutton--ghost">
                         Resumé
                       </a>
                       <span>,</span>
-                      <a download="" href="contact.html" class="button button--ghost">
+                      <a download="" href="contact.html" class="indexbutton indexbutton--ghost">
                         Contact Me
                       </a>
                       <span>, or send me an email at</span>
-                      <a download="" href="mailto:samruddhi0730@gmail.com" class="button button--ghost">
+                      <a download="" href="mailto:samruddhi0730@gmail.com" class="indexbutton indexbutton--ghost">
                         samruddhi0730@gmail.com
                       </a>
 
@@ -127,19 +127,21 @@
 
             </section>
 
-
-
+            <section class="bottom_section">
+              <div class="grid">
+                  <a class="bottom__button" href="about.html">
+                    See More <u>About Me</u> <i class='bx bx-right-arrow-alt bottom__icon'></i>
+                  </a>
+                </div>
+            </section>
 
 
 
       <!--=============== WORK ===============-->
             <section class="work section" id="work">
-
-
               <div class="work__container container grid">
 
               </div>
-
             </section>
 
 
