--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
             <div class="nav__menu">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a href="index.html" class="nav__link active-link">
+                  <a href="index.html" class="nav__link">
                     <i class='bx bx-home-alt'></i>
                     <!-- <p style="font-size: 12px;">About</p> -->
                   </a>
@@ -40,7 +40,7 @@
                 </li>
 
                 <li class="nav__item">
-                  <a href="projects.html" class="nav__link">
+                  <a href="projects.html" class="nav__link active-link">
                     <!-- <i class='bx bx-book'></i> -->
                     <i class='bx bx-notepad'></i>
 
@@ -210,12 +210,16 @@
                 </a>
               </div>
 
-
             </div>
 
+          </section>
 
-
-
+          <section class="bottom_section">
+            <div class="grid">
+                <a class="bottom__button" href="resume.html">
+                  Lets Go To My <u>Resume</u> <i class='bx bx-right-arrow-alt bottom__icon'></i>
+                </a>
+              </div>
           </section>
 
 
