--- a/about.html
+++ b/about.html
@@ -27,14 +27,14 @@
             <div class="nav__menu">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a href="index.html" class="nav__link active-link">
+                  <a href="index.html" class="nav__link">
                     <i class='bx bx-home-alt'></i>
                     <!-- <p style="font-size: 12px;">About</p> -->
                   </a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="about.html" class="nav__link">
+                  <a href="about.html" class="nav__link active-link">
                     <i class='bx bx-user'></i>
                   </a>
                 </li>
@@ -73,61 +73,71 @@
 
         <!--=============== MAIN ===============-->
         <main class="main">
-            <!--=============== HOME ===============-->
-            <section class="home section" id="home">
-              <div class="home__container container grid">
-                <div class="home__data">
-                  <!-- <span class="home__greeting">Hello, I'm</span> -->
-                  <h1 class="home__name"> I'm Samruddhi Somwanshi</h1>
-                  <br>
-                  <span class="home__education">Software Developer, Frontend developer, UX architect and Javascript engineer, Photochromic Lens enthusiast, practicing minimalist, and Pop Music & Jazz lover in search of flow.</span>
-                  <br>
-                  <br>
-                  <span class="home__education ">Giving the least difficult answer for the most perplexing problems. View my
 
-                      <a download="" href="projects.html" class="button button--ghost">
-                        Projects
-                      </a>
-                      <span>,</span>
-                      <a download="" href="resume.html" class="button button--ghost">
-                        Resumé
-                      </a>
-                      <span>,</span>
-                      <a download="" href="contact.html" class="button button--ghost">
-                        Contact Me
-                      </a>
-                      <span>, or send me an email at</span>
-                      <a download="" href="mailto:samruddhi0730@gmail.com" class="button button--ghost">
-                        samruddhi0730@gmail.com
-                      </a>
+          <!--=============== ABOUT ===============-->
+          <section class="about section" id="about">
+
+            <span class="section__subtitle">My Intro</span>
+            <h2 class="section__title">About Me</h2>
+
+            <div class="about__container container grid">
 
 
-                  </span>
+              <div class="about__data">
+                <img src="assets/img/about.jpeg" alt="" class="about__img">
 
 
-
-                </div>
-
-
-
-                <div class="home__social">
-                  <a href="https://www.linkedin.com/in/samruddhi30" target="_blank" class="home__social-link">
-                    <i class='bx bxl-linkedin-square'></i>
-                  </a>
-                  <a href="https://github.com/sam301100" target="_blank" class="home__social-link">
-                    <i class='bx bxl-github'></i>
-                  </a>
-                  <a href="mailto:samruddhi0730@gmail.com" target="_blank" target="_blank" class="home__social-link">
-                    <i class='bx bxl-gmail' ></i>
-                  </a>
-
-                </div>
 
               </div>
 
-            </section>
+              <div class="about__data">
+
+                <div class="about__info">
+
+                  <div class="about__box">
+                    <i class='bx bx-award about__icon' ></i>
+                    <h3 class="about__title">Computer Engineer</h3>
+                    <span class="about__subtitle">Cummins College of Engineering for Women, India</span>
+
+                  </div>
+                  <div class="about__box">
+                    <i class='bx bxs-graduation about__icon'></i>
+                    <h3 class="about__title">Master of Science in Computer Science</h3>
+                    <span class="about__subtitle">San Diego State University, USA</span>
+
+                  </div>
+                  <div class="about__box">
+                    <i class='bx bx-briefcase-alt about__icon'></i>
+                    <h3 class="about__title">Internships</h3>
+                    <span class="about__subtitle">1. Dell Technologies 2. TEIM (The Entrepreneur in me) 3. Project42 Labs</span>
+
+                  </div>
+
+                </div>
+
+                <p class="about__description">
+                  <!-- Front developer, I create web pages with UI / UX user interface,
+                  I have years of experience and many clients are happy
+                  with the projects carried out. -->
+
+                  I am a hardworking, solution oriented technology enthusiast. I'm passionate about finding a better approach to solve any problem
+                  Currently, I’m focused on delving more into Computer Science and its applications by addressing new problems as the technology continues to push forward.
+                </p>
 
 
+              </div>
+
+            </div>
+
+          </section>
+
+          <section class="bottom_section">
+            <div class="grid">
+                <a class="bottom__button" href="projects.html">
+                  Lets Continue To <u>Projects</u> <i class='bx bx-right-arrow-alt bottom__icon'></i>
+                </a>
+              </div>
+          </section>
 
 
 
@@ -141,6 +151,8 @@
               </div>
 
             </section>
+
+
 
 
         </main>
