--- a/about.html
+++ b/about.html
@@ -96,32 +96,35 @@
 
                   <div class="about__box">
                     <i class='bx bx-award about__icon' ></i>
-                    <h3 class="about__title">Computer Engineer</h3>
-                    <span class="about__subtitle">Cummins College of Engineering for Women, India</span>
+                    <h3 class="about__title">B.Tech. Computer Engineer</h3>
+                    <span class="about__subtitle">MH, India</span>
 
                   </div>
                   <div class="about__box">
                     <i class='bx bxs-graduation about__icon'></i>
-                    <h3 class="about__title">Master of Science in Computer Science</h3>
-                    <span class="about__subtitle">San Diego State University, USA</span>
+                    <h3 class="about__title">M.S. <br> Computer Science</h3>
+                    <span class="about__subtitle">CA, USA</span>
 
                   </div>
                   <div class="about__box">
                     <i class='bx bx-briefcase-alt about__icon'></i>
-                    <h3 class="about__title">Internships</h3>
-                    <span class="about__subtitle">1. Dell Technologies 2. TEIM (The Entrepreneur in me) 3. Project42 Labs</span>
+                    <h3 class="about__title">Professional Experience </h3>
+                    <span class="about__subtitle">4 Internships</span>
 
                   </div>
 
                 </div>
 
                 <p class="about__description">
-                  <!-- Front developer, I create web pages with UI / UX user interface,
-                  I have years of experience and many clients are happy
-                  with the projects carried out. -->
-
-                  I am a hardworking, solution oriented technology enthusiast. I'm passionate about finding a better approach to solve any problem
-                  Currently, I’m focused on delving more into Computer Science and its applications by addressing new problems as the technology continues to push forward.
+                  I love to dig into problem-solving and analysis.
+                  I design, develop, upgrade, and maintain software using the right programming languages, platforms, and architectures.
+                  To accomplish this, I focus on delivering key outcomes, working in teams, and quickly adapting to new learnings.
+                  I enjoy meeting new people and hearing new perspectives.
+                  <br><br>
+                  <a download="" href="contact.html" class="indexbutton">
+                    Reach out
+                  </a>
+                  if you want to talk to me about emerging tech, building software applications, or music & exploring new places.
                 </p>
 
 
