--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
                   <!-- <span class="home__greeting">Hello, I'm</span> -->
                   <h1 class="home__name"> I'm Samruddhi Somwanshi</h1>
                   <br>
-                  <span class="home__education">Software Developer, Frontend developer, UX architect and Javascript engineer, Photochromic Lens enthusiast, practicing minimalist, and Pop Music & Jazz lover in search of flow.</span>
+                  <span class="home__education">Software Developer, Programmer, Computer engineer, Photography enthusiast, and
+                    <a download="" href="https://open.spotify.com/" class="indexbutton">
+                      Classical Music
+                    </a>
+                    & travel lover in search of flow.</span>
                   <br>
                   <br>
                   <span class="home__education ">Giving the least difficult answer for the most perplexing problems. View my
@@ -89,15 +93,15 @@
                         Projects
                       </a>
                       <span>,</span>
-                      <a download="" href="resume.html" class="indexbutton indexbutton--ghost">
+                      <a download="" href="resume.html" class="indexbutton">
                         Resumé
                       </a>
                       <span>,</span>
-                      <a download="" href="contact.html" class="indexbutton indexbutton--ghost">
+                      <a download="" href="contact.html" class="indexbutton">
                         Contact Me
                       </a>
                       <span>, or send me an email at</span>
-                      <a download="" href="mailto:samruddhi0730@gmail.com" class="indexbutton indexbutton--ghost">
+                      <a download="" href="mailto:samruddhi0730@gmail.com" class="indexbutton">
                         samruddhi0730@gmail.com
                       </a>
 
