index.html edited

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <h1 class="home__name"> I'm Samruddhi Somwanshi</h1>
                   <br>
                   <span class="home__education">Software Developer, Programmer, Computer engineer, Photography enthusiast, and
-                    <a download="" href="https://open.spotify.com/" class="indexbutton">
+                    <a href="https://open.spotify.com/" class="indexbutton">
                       Classical Music
                     </a>
                     & travel lover in search of flow.</span>
@@ -89,19 +89,19 @@
                   <br>
                   <span class="home__education ">Giving the least difficult answer for the most perplexing problems. View my
 
-                      <a download="" href="projects.html" class="indexbutton">
+                      <a href="projects.html" class="indexbutton">
                         Projects
                       </a>
                       <span>,</span>
-                      <a download="" href="resume.html" class="indexbutton">
+                      <a href="resume.html" class="indexbutton">
                         Resumé
                       </a>
                       <span>,</span>
-                      <a download="" href="contact.html" class="indexbutton">
+                      <a href="contact.html" class="indexbutton">
                         Contact Me
                       </a>
                       <span>, or send me an email at</span>
-                      <a download="" href="mailto:samruddhi0730@gmail.com" class="indexbutton">
+                      <a href="mailto:samruddhi0730@gmail.com" class="indexbutton">
                         samruddhi0730@gmail.com
                       </a>
 
