--- a/resume.html
+++ b/resume.html
@@ -81,11 +81,11 @@
 
                       <div class="timeline__container container">
                         <div class="timeline__tabs">
-                          <div class="timeline__button button--flex" data-target='#education'>
+                          <div class="timeline__button button--flex timeline__active" data-target='#education'>
                             <i class='bx bxs-graduation timeline__icon'></i>
                             Education
                           </div>
-                          <div class="timeline__button button--flex timeline__active" data-target='#work'>
+                          <div class="timeline__button button--flex" data-target='#work'>
                             <i class='bx bxs-briefcase timeline__icon'></i>
                             Work
                           </div>
@@ -161,7 +161,7 @@
                             <div class="timeline__data">
                               <div class="">
                                 <h3 class="timeline__title">Goldman Sachs, USA</h3>
-                                <span class="timeline__subtitle">Summer Analyst</span>
+                                <span class="timeline__subtitle">Summer Analyst Intern</span>
                                 <div class="timeline__calendar">
                                   <i class='bx bxs-calendar'></i>
                                   Jun 2023 - Aug 2023
@@ -264,34 +264,30 @@
                   <div class="services__modal-content">
                     <i class='bx bx-x services__modal-close'></i>
 
-                    <h4 style="text-align: center;">At</h4>
-                    <h3 class="services__modal-title">Project42Labs</h3>
-                    <!-- <p class="services__modal-about__description">
-                       Figma, HTML, JavaScript, CSS, Bootstrap, MongoDB
-                    </p> -->
-
+                    <h4 style="text-align: center;">As</h4>
+                    <h3 class="services__modal-title">Summer Analyst Intern</h3>
 
                     <ul class="services__modal-list">
                       <li class="services__modal-item">
                         <i class='bx bx-check services__modal-icon'></i>
                         <p class="services__modal-info">
-                          Designed the website’s Graphical User Interface in line with company branding policy using the tool – Figma.
+                          Looking forward for an exciting summer at Salt Lake City, Utah !
                         </p>
                       </li>
 
-                      <li class="services__modal-item">
+                      <!-- <li class="services__modal-item">
                         <i class='bx bx-check services__modal-icon'></i>
-                        <p class="services__modal-info">
-                          Worked on front-end technologies (HTML, JavaScript, CSS), Bootstrap framework, and MongoDB database.
-                        </p>
-                      </li>
+                        <p class="services__modal-info"> -->
+                          <!-- Worked on front-end technologies (HTML, JavaScript, CSS), Bootstrap framework, and MongoDB database. -->
+                        <!-- </p>
+                      </li> -->
 
-                      <li class="services__modal-item">
+                      <!-- <li class="services__modal-item">
                         <i class='bx bx-check services__modal-icon'></i>
                         <p class="services__modal-info">
                           Ensured that the code meets industry standards, is well structured, valid, and compatible with browsers and OS.
                         </p>
-                      </li>
+                      </li> -->
 
                     </ul>
                   </div>
@@ -310,8 +306,8 @@
                 <div class="services__modal">
                   <div class="services__modal-content">
                     <i class='bx bx-x services__modal-close'></i>
-                    <h4 style="text-align: center;">At</h4>
-                    <h3 class="services__modal-title">Dell Technologies</h3>
+                    <h4 style="text-align: center;">As</h4>
+                    <h3 class="services__modal-title">Software Development Engineer (SDE) Intern</h3>
                     <!-- <p class="services__modal-about__description">
                       Agile Methodology, MVC, SQL
                     </p> -->
@@ -371,8 +367,8 @@ application that tracks the order shipment process with Carriers and 3rd partly 
                   <div class="services__modal-content">
                     <i class='bx bx-x services__modal-close'></i>
 
-                    <h4 style="text-align: center;">At</h4>
-                    <h3 class="services__modal-title">Project42Labs</h3>
+                    <h4 style="text-align: center;">As</h4>
+                    <h3 class="services__modal-title">Web Development Intern</h3>
                     <!-- <p class="services__modal-about__description">
                        Figma, HTML, JavaScript, CSS, Bootstrap, MongoDB
                     </p> -->
@@ -417,8 +413,8 @@ application that tracks the order shipment process with Carriers and 3rd partly 
                 <div class="services__modal">
                   <div class="services__modal-content">
                     <i class='bx bx-x services__modal-close'></i>
-                    <h4 style="text-align: center;">At</h4>
-                    <h3 class="services__modal-title">TEIM (The Entrepreneur in me)</h3>
+                    <h4 style="text-align: center;">As</h4>
+                    <h3 class="services__modal-title">Data Science Intern</h3>
                     <!-- <p class="services__modal-about__description">
                        Python, SQL, Power Bi
                     </p> -->
